--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uber</title>
+    <title>Uber\</title>
 
     <link rel="shortcut icon" href="Image/1/favicon-32x32.png" type="image/x-icon">
 
